--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -37,9 +37,7 @@
 
 	<script type="text/javascript" src="js/widgets/widget-root.js"></script>
 
-	<script type="text/javascript" src="js/model/contract.js"></script>
-	<script type="text/javascript" src="js/model/contract.proxy.js"></script>
-	<script type="text/javascript" src="js/model/account.js"></script>
+	<script type="text/javascript" src="js/vendor/blockchain-sdk-client.js"></script>
 </head>
 
 <body>
