--- a/src/main/webapp/sandbox.html
+++ b/src/main/webapp/sandbox.html
@@ -242,7 +242,6 @@
 		</div>
 
 
-		<!-- <script src="bin/list.js"></script> -->
 		<script src="js/vendor/base64.js"></script>
 		<script src="js/vendor/jquery-2.1.3.min.js"></script>
 		<script src="js/vendor/jquery-ui.min.js"></script>
@@ -256,15 +255,12 @@
 		<script src="js/vendor/backbone.js" charset="utf-8"></script>
 		<script src="js/vendor/bluebird.core.min.js" charset="utf-8"></script>
 
+		<!-- blockchain sdk + deps -->
 		<script src="js/vendor/sockjs-1.0.3.min.js" charset="utf-8"></script>
 		<script src="js/vendor/stomp.min.js" charset="utf-8"></script>
-		<script src="js/client.js" charset="utf-8"></script>
-		<script src="js/model/contract.js" charset="utf-8"></script>
-		<script src="js/model/contract.proxy.js" charset="utf-8"></script>
-		<script src="js/model/transaction.js" charset="utf-8"></script>
-		<script src="js/model/account.js" charset="utf-8"></script>
-		<script src="js/model/node.js" charset="utf-8"></script>
+		<script src="js/vendor/blockchain-sdk-client.js" charset="utf-8"></script>
 
+		<!-- sandbox code -->
 		<script src="js/sandbox/init.js" charset="utf-8"></script>
 		<script src="js/sandbox/lib.js" charset="utf-8"></script>
 		<script src="js/sandbox/tx.js" charset="utf-8"></script>
