--- a/cakeshop-api/src/main/webapp/sandbox.html
+++ b/cakeshop-api/src/main/webapp/sandbox.html
@@ -258,7 +258,7 @@
 		<!-- blockchain sdk + deps -->
 		<script src="js/vendor/sockjs-1.0.3.min.js" charset="utf-8"></script>
 		<script src="js/vendor/stomp.min.js" charset="utf-8"></script>
-		<script src="js/vendor/blockchain-sdk-client.js" charset="utf-8"></script>
+		<script src="js/vendor/cakeshop.js" charset="utf-8"></script>
 
 		<!-- sandbox code -->
 		<script src="js/sandbox/init.js" charset="utf-8"></script>
