--- a/cakeshop-api/src/main/webapp/index.html
+++ b/cakeshop-api/src/main/webapp/index.html
@@ -37,7 +37,7 @@
 
 	<script type="text/javascript" src="js/widgets/widget-root.js"></script>
 
-	<script type="text/javascript" src="js/vendor/blockchain-sdk-client.js"></script>
+	<script type="text/javascript" src="js/vendor/cakeshop.js"></script>
 </head>
 
 <body>
