--- a/cakeshop-api/src/main/webapp/test.html
+++ b/cakeshop-api/src/main/webapp/test.html
@@ -11,7 +11,7 @@
 //        var stompTransClient = null;
 
         function connect() {
-            var socket = new SockJS('/ethereum-enterprise/ws');
+            var socket = new SockJS('/cakeshop/ws');
             stompClient = Stomp.over(socket);
             stompClient.connect({}, function(frame) {
                 console.log('Connected NODE: ' + frame);
