[api] some minor ui tweaks

--- a/cakeshop-api/src/main/webapp/index.html
+++ b/cakeshop-api/src/main/webapp/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Dashboard | Blockchain SDK</title>
+	<title>Cakeshop // Dashboard</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css">
@@ -46,8 +46,8 @@
 		<header>
 			<nav class="tower-navigation">
 				<div class="tower-logo-container">
-					<a href="#" class="tower-logo">Tower Control</a>
-					<a href="#" class="tower-toggle-btn pull-right"><i class="fa fa-bars"></i></a>
+					<a href="#" class="tower-logo">Cakeshop // Dashboard</a>
+					<!-- <a href="#" class="tower-toggle-btn pull-right"><i class="fa fa-bars"></i></a> -->
 				</div>
 				<a href="#" class="tower-logo-hidden">Tower Control</a>
 			</nav>
