--- a/cakeshop-api/src/main/webapp/index.html
+++ b/cakeshop-api/src/main/webapp/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/epoch.min.css">
+	<link rel="stylesheet" type="text/css" href="css/vendor/bootstrap-tour.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<script type="text/javascript" src="js/vendor/jquery-2.1.3.min.js"></script>
@@ -25,11 +26,13 @@
 	<script type="text/javascript" src="js/vendor/d3.min.js"></script>
 	<script type="text/javascript" src="js/vendor/epoch.min.js"></script>
 	<script type="text/javascript" src="js/vendor/cakeshop.js"></script>
+	<script type="text/javascript" src="js/vendor/bootstrap-tour.min.js"></script>
 
 	<script type="text/javascript" src="js/vendor/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="js/vendor/packery.2.0.min.js"></script>
 
 	<script type="text/javascript" src="js/utils.js"></script>
+	<script type="text/javascript" src="js/tour.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
 
 	<script type="text/javascript" src="js/dashboard-core.js"></script>
@@ -62,20 +65,6 @@
 						<span class="tower-sidebar-item">Console</span>
 					</a>
 				</li>
-				<li id="peers">
-					<a href="#">
-						<i class="fa fa-users">
-						<span class="icon-bg tower-bg-danger"></span>
-					</i>
-						<span class="tower-sidebar-item">Peers</span>
-					</a>
-				</li>
-				<li id="api">
-					<a href="#" class="snooz">
-						<i class="fa fa-book"><span class="icon-bg tower-bg-primary"></span></i>
-						<span class="tower-sidebar-item">API</span>
-					</a>
-				</li>
 				<li id="contracts">
 					<a href="#" class="done">
 						<i class="fa fa-bank"><span class="icon-bg tower-bg-warning"></span></i>
@@ -100,6 +89,26 @@
 						<span class="tower-sidebar-item">Accounts</span>
 					</a>
 				</li>
+				<li id="peers">
+					<a href="#">
+						<i class="fa fa-users">
+						<span class="icon-bg tower-bg-danger"></span>
+					</i>
+						<span class="tower-sidebar-item">Peers</span>
+					</a>
+				</li>
+				<li id="api">
+					<a href="#" class="snooz">
+						<i class="fa fa-book"><span class="icon-bg tower-bg-primary"></span></i>
+						<span class="tower-sidebar-item">API</span>
+					</a>
+				</li>
+				<li id="help">
+					<a href="#" class="done">
+						<i class="fa fa-question"><span class="icon-bg tower-bg-primary"></span></i>
+						<span class="tower-sidebar-item">Help</span>
+					</a>
+				</li>
 			</ul>
 		</nav>
 	</aside>
@@ -114,7 +123,7 @@
 						<span>Console</span>
 					</header>
 
-					<div class="row">
+					<div class="row" id="heads-up">
 						<div class="col-lg-3 col-xs-6">
 							<div class="tower-nugget tower-txt-success">
 								<i class="fa fa-play"></i>
