CSS for incon color

--- a/cakeshop-api/src/main/webapp/index.html
+++ b/cakeshop-api/src/main/webapp/index.html
@@ -61,51 +61,49 @@
 			<ul>
 				<li id="console">
 					<a href="#" class="inbox">
-						<i class="fa fa-dashboard"><span class="icon-bg tower-bg-success"></span></i>
+						<i class="fa fa-dashboard"><span class="icon-bg"></span></i>
 						<span class="tower-sidebar-item">Console</span>
 					</a>
 				</li>
 				<li id="contracts">
 					<a href="#" class="done">
-						<i class="fa fa-bank"><span class="icon-bg tower-bg-warning"></span></i>
+						<i class="fa fa-bank"><span class="icon-bg"></span></i>
 						<span class="tower-sidebar-item">Contracts</span>
 					</a>
 				</li>
 				<li id="sandbox">
 					<a href="sandbox.html" target="_sandbox">
-						<i class="fa fa-send"><span class="icon-bg tower-bg-violet"></span></i>
+						<i class="fa fa-send"><span class="icon-bg"></span></i>
 						<span class="tower-sidebar-item">Sandbox</span>
 					</a>
 				</li>
 				<li id="explorer">
 					<a href="#" class="done">
-						<i class="fa fa-cubes"><span class="icon-bg tower-bg-success"></span></i>
+						<i class="fa fa-cubes"><span class="icon-bg"></span></i>
 						<span class="tower-sidebar-item">Chain Explorer</span>
 					</a>
 				</li>
 				<li id="wallet">
 					<a href="#" class="done">
-						<i class="fa fa-google-wallet"><span class="icon-bg tower-bg-danger"></span></i>
+						<i class="fa fa-google-wallet"><span class="icon-bg"></span></i>
 						<span class="tower-sidebar-item">Accounts</span>
 					</a>
 				</li>
 				<li id="peers">
 					<a href="#">
-						<i class="fa fa-users">
-						<span class="icon-bg tower-bg-danger"></span>
-					</i>
+						<i class="fa fa-users"><span class="icon-bg"></span></i>
 						<span class="tower-sidebar-item">Peers</span>
 					</a>
 				</li>
 				<li id="api">
 					<a href="#" class="snooz">
-						<i class="fa fa-book"><span class="icon-bg tower-bg-primary"></span></i>
+						<i class="fa fa-book"><span class="icon-bg"></span></i>
 						<span class="tower-sidebar-item">API</span>
 					</a>
 				</li>
 				<li id="help">
 					<a href="#" class="done">
-						<i class="fa fa-question"><span class="icon-bg tower-bg-primary"></span></i>
+						<i class="fa fa-question"><span class="icon-bg"></span></i>
 						<span class="tower-sidebar-item">Help</span>
 					</a>
 				</li>
