Bundle js with webpack.
This also solves the original problem, of widgets loading in the wrong
order.

--- a/cakeshop-api/src/main/webapp/index.html
+++ b/cakeshop-api/src/main/webapp/index.html
@@ -33,13 +33,7 @@
 
 	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/tour.js"></script>
-	<script type="text/javascript" src="js/index.js"></script>
-
-	<script type="text/javascript" src="js/dashboard-core.js"></script>
-	<script type="text/javascript" src="js/dashboard-util.js"></script>
-	<script type="text/javascript" src="js/dashboard-template.js"></script>
-
-	<script type="text/javascript" src="js/widgets/widget-root.js"></script>
+	<script type="text/javascript" src="js/index-gen.js"></script>
 </head>
 
 <body>
