--- a/cakeshop-api/src/main/webapp/index.html
+++ b/cakeshop-api/src/main/webapp/index.html
@@ -26,6 +26,17 @@
 					<!-- <a href="#" class="tower-toggle-btn pull-right"><i class="fa fa-bars"></i></a> -->
 				</div>
 				<a href="#" class="tower-logo-hidden">Tower Control</a>
+				<div class="dropdown settings">
+					<i class="fa fa-cog dropdown-toggle"  data-toggle="dropdown" aria-hidden="true" aria-haspopup="true" aria-expanded="false"></i>
+					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+						<div class="dropdown-arrow"><div class="arrow-up"></div></div>
+						<ul>
+							<li class="dropdown-item" href="#"><h4>Settings</li></h4>
+							<hr />
+							<li id="reset" class="dropdown-item" href="#">Reset Layout</li>
+						</ul>
+					</div>
+				</div>
 			</nav>
 		</header>
 	</section>
