--- a/cakeshop-api/src/main/webapp/index.html
+++ b/cakeshop-api/src/main/webapp/index.html
@@ -33,7 +33,8 @@
 						<ul>
 							<li class="dropdown-item" href="#"><h4>Settings</li></h4>
 							<hr />
-							<li id="reset" class="dropdown-item" href="#">Reset Layout</li>
+							<li id="reset" class="dropdown-item" href="#">Reset Section</li>
+							<li id="reset-all" class="dropdown-item" href="#">Reset All Sections</li>
 						</ul>
 					</div>
 				</div>
