--- a/cakeshop-api/src/main/webapp/sandbox.html
+++ b/cakeshop-api/src/main/webapp/sandbox.html
@@ -269,6 +269,7 @@
 		<script src="js/sandbox/editor.js" charset="utf-8"></script>
 		<script src="js/sandbox/sidebar.js" charset="utf-8"></script>
 		<script src="js/sandbox/gist.js" charset="utf-8"></script>
+		<script src="js/sandbox-tour.js" charset="utf-8"></script>
 		<script src="js/sandbox.js" charset="utf-8"></script>
 	</body>
 </html>
