more sandbox tour steps

--- a/cakeshop-api/src/main/webapp/sandbox.html
+++ b/cakeshop-api/src/main/webapp/sandbox.html
@@ -100,7 +100,7 @@
 
 									<div class="col-md-6 col2">
 
-										<div class="panel panel-default select_contract">
+										<div id="select-contract" class="panel panel-default select_contract">
 											<div class="panel-heading">
 												<h3 class="panel-title">
 													<span class="title">Choose Contract</span>
@@ -132,7 +132,7 @@
 											</div>
 										</div>
 
-										<div class="panel panel-default transact">
+										<div id="transact" class="panel panel-default transact">
 											<div class="panel-heading">
 												<h3 class="panel-title">
 													<span class="title">Transact</span>
@@ -146,7 +146,7 @@
 
 
 									<div class="col-md-6 col3">
-										<div class="panel panel-default accounts">
+										<div id="accounts" class="panel panel-default accounts">
 											<div class="panel-heading">
 												<h3 class="panel-title">
 													<span class="title">Accounts</span>
@@ -155,7 +155,7 @@
 											</div>
 										</div>
 
-										<div class="panel panel-default state">
+										<div id="state" class="panel panel-default state">
 											<div class="panel-heading">
 												<h3 class="panel-title">
 													<span class="title">Contract State</span>
@@ -164,7 +164,7 @@
 											</div>
 										</div>
 
-										<div class="panel panel-default papertape">
+										<div id="papertape" class="panel panel-default papertape">
 											<div class="panel-heading">
 												<h3 class="panel-title">
 													<span class="title">Paper Tape</span>
