[sandbox] split out tour; fixed nav

--- a/cakeshop-api/src/main/webapp/sandbox.html
+++ b/cakeshop-api/src/main/webapp/sandbox.html
@@ -56,7 +56,7 @@
 									<li role="presentation" class="libView"><a title="Contract Library"><i class="fa fa-bank"></i></a></li>
 									<li role="presentation" class="compilerView"><a title="Compiler Output"><i class="fa fa-code"></i></a></li>
 									<li role="presentation" class="settingsView"><a title="Settings"><i class="fa fa-gear"></i></a></li>
-									<li role="presentation" class="startHelp" id="help"><a title="Help"><i class="fa fa-question"></i></a></li>
+									<li role="presentation" class="help" id="help"><a title="Help"><i class="fa fa-question"></i></a></li>
 								</ul>
 
 								<!-- block number & mining status widgets -->
@@ -246,7 +246,7 @@
 		<script src="js/sandbox/editor.js" charset="utf-8"></script>
 		<script src="js/sandbox/sidebar.js" charset="utf-8"></script>
 		<script src="js/sandbox/gist.js" charset="utf-8"></script>
-		<script src="js/sandbox-tour.js" charset="utf-8"></script>
+		<script src="js/sandbox/tour.js" charset="utf-8"></script>
 		<script src="js/sandbox.js" charset="utf-8"></script>
 	</body>
 </html>
