shorten queued transactions pinned widget name to queued txns

--- a/cakeshop-api/src/main/webapp/index.html
+++ b/cakeshop-api/src/main/webapp/index.html
@@ -141,7 +141,7 @@
 						<div class="col-lg-3 col-xs-6">
 							<div class="tower-nugget tower-txt-danger">
 								<i class="fa fa-exchange"></i>
-								<span class="heading">Queued Transactions</span>
+								<span class="heading">Queued Txns</span>
 								<span class="value default" id="default-txn">
 									<span>-</span>
 								</span>
