--- a/cakeshop-api/src/main/webapp/sandbox.html
+++ b/cakeshop-api/src/main/webapp/sandbox.html
@@ -82,25 +82,23 @@
                     </div>
                     <div class="panel-body">
                       <div class="form-group contracts">
-                        <label>From Deployed Contracts:
-                          <select class="form-control"></select>
-                        </label>
+                        <label>From Deployed Contracts:</label>
+						<select class="form-control"></select>
+
                         <i class="refresh fa fa-refresh fa-2x fa-spin start_hidden"></i>
                       </div>
 
                       <div class="form-group compiled_contracts">
-                        <label>Or Deploy From Editor:
-                          <select class="form-control"></select>
-                        </label>
-                        <i class="refresh fa fa-refresh fa-2x fa-spin start_hidden"></i>
+                        <label>Or Deploy From Editor:</label>
+						<i class="refresh fa fa-refresh fa-2x fa-spin start_hidden"></i>
+						<select class="form-control"></select>
                         <div class="form-group constructor start_hidden">
                         </div>
                       </div>
 
                       <div class="form-group address">
-                        <label>Or Enter Address:
-                          <input type="text" class="form-control" placeholder="address">
-                        </label>
+                        <label>Or Enter Address:</label>
+						<input type="text" class="form-control" placeholder="address">
                       </div>
                     </div>
                   </div>
