styling for transactions tab in sandbox

--- a/cakeshop-api/src/main/webapp/sandbox.html
+++ b/cakeshop-api/src/main/webapp/sandbox.html
@@ -82,14 +82,13 @@
                     </div>
                     <div class="panel-body">
                       <div class="form-group contracts">
-                        <label>From Deployed Contracts:</label>
+                        <label class="withRefreshLabel">From Deployed Contracts:</label>
+						<i class="refresh fa fa-refresh fa-2x fa-spin start_hidden"></i>
 						<select class="form-control"></select>
-
-                        <i class="refresh fa fa-refresh fa-2x fa-spin start_hidden"></i>
                       </div>
 
                       <div class="form-group compiled_contracts">
-                        <label>Or Deploy From Editor:</label>
+                        <label class="withRefreshLabel">Or Deploy From Editor:</label>
 						<i class="refresh fa fa-refresh fa-2x fa-spin start_hidden"></i>
 						<select class="form-control"></select>
                         <div class="form-group constructor start_hidden">
